# agent-mesh

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
crates/agent-mesh-core/: Cargo.toml
crates/agent-mesh-core/src/: agent_card.rs  identity.rs  lib.rs  message.rs  noise.rs  sync.rs  user.rs
crates/agent-mesh-registry/: Cargo.toml
crates/agent-mesh-registry/src/: auth.rs  db.rs  lib.rs  main.rs  routes.rs  sync.rs
crates/agent-mesh-registry/src/routes/: acl.rs  agents.rs  gate.rs  groups.rs  mod.rs  oauth.rs  revocations.rs  setup_keys.rs  status.rs  users.rs
crates/agent-mesh-registry/tests/: api.rs
crates/agent-mesh-relay/: Cargo.toml
crates/agent-mesh-relay/src/: config.rs  gate.rs  hub.rs  lib.rs  main.rs  ws.rs
crates/agent-mesh-relay/tests/: e2e.rs
crates/agent-mesh-relay/tests/snapshots/: e2e__status_endpoint_empty.snap
crates/agent-mesh-sdk/: Cargo.toml
crates/agent-mesh-sdk/src/: agent.rs  client.rs  connection.rs  error.rs  lib.rs
crates/agent-mesh-server/: Cargo.toml
crates/agent-mesh-server/src/: main.rs
crates/agent-mesh-wasm/: Cargo.toml
crates/agent-mesh-wasm/src/: client.rs  error.rs  js_api.rs  lib.rs
crates/agent-meshctl/: Cargo.toml
crates/agent-meshctl/src/: commands.rs  cp_client.rs  daemon.rs  lib.rs  main.rs
crates/agent-meshctl/src/commands/: acl.rs  deregister.rs  discover.rs  group.rs  keygen.rs  login.rs  mod.rs  register.rs  request.rs  revoke.rs  rotate.rs  setup_key.rs  status.rs
crates/agent-meshctl/src/mcp_server/: auth.rs  convert.rs  inbound.rs  mod.rs
crates/agent-meshd/: Cargo.toml
crates/agent-meshd/src/: config.rs  cp_sync.rs  lib.rs  local_api.rs  main.rs  node.rs  proxy.rs
crates/agent-meshd/src/local_api/: mod.rs  request.rs  tests.rs
docs/: self-hosting.md
examples/: Cargo.toml
mesh-proto/: Cargo.toml
mesh-proto/src/: acl.rs  agent_card.rs  error.rs  identity.rs  lib.rs  message.rs
mesh-sdk/: Cargo.toml
mesh-sdk/src/: agent.rs  client.rs  connection.rs  error.rs  lib.rs
meshctl/: Cargo.toml
meshctl/src/: commands.rs  main.rs
meshd/: Cargo.toml
meshd/src/: config.rs  node.rs  proxy.rs
pwa/: build.sh  index.html  manifest.json  package-lock.json  package.json  sw.js  tsconfig.json  vite.config.ts
pwa/src/: App.tsx  theme.ts  types.ts  wasm.d.ts  wasm.ts
pwa/src/components/: AgentInfo.tsx  AgentList.tsx  AgentSelector.tsx  ChatView.tsx  Collapsible.tsx  Log.tsx  Login.tsx  MessageInput.tsx  MessageList.tsx  RequestForm.tsx  StatusBar.tsx
pwa/src/hooks/: useApi.ts  useChat.ts  useLog.ts
registry/: Cargo.toml
registry/src/: db.rs  main.rs  routes.rs
relay/: Cargo.toml
relay/src/: config.rs  hub.rs  main.rs  ws.rs
scripts/: echo_server.py
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: fullstack.rs
tests/tests/common/: mod.rs
