[workspace]
resolver = "2"
members = [
    "crates/agent-mesh-core",
    "crates/agent-mesh-sdk",
    "crates/agent-mesh-relay",
    "crates/agent-mesh-registry",
    "crates/agent-meshd",
    "crates/agent-meshctl",
    "crates/agent-mesh-server",
    "examples",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/agent-mesh"

[workspace.dependencies]
agent-mesh-core = { path = "crates/agent-mesh-core", version = "0.2.0" }
agent-mesh-relay = { path = "crates/agent-mesh-relay", version = "0.2.0" }
agent-mesh-registry = { path = "crates/agent-mesh-registry", version = "0.2.0" }
agent-mesh-sdk = { path = "crates/agent-mesh-sdk", version = "0.2.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web / HTTP
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
snow = "0.9"
rand = "0.8"
sha2 = "0.10"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
async-trait = "0.1"
