[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "e2e-demo"
path = "src/bin/e2e_demo.rs"

[dependencies]
mesh-proto = { workspace = true }
mesh-sdk = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
