[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Demos for agent-mesh"
publish = false

[[bin]]
name = "mesh-demo"
path = "src/bin/mesh_demo.rs"

[dependencies]
agent-mesh-core = { workspace = true }
agent-mesh-relay = { workspace = true }
agent-mesh-registry = { workspace = true }
agent-mesh-sdk = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
