[package]
name = "mesh-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
