[package]
name = "mesh-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Client/agent SDK for agent-mesh with E2E encryption"

[dependencies]
mesh-proto = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
async-trait = { workspace = true }
