[package]
name = "agent-mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types for agent-mesh: identity, messages, ACL, Noise handshake"
keywords = ["agent", "mesh", "encryption", "noise", "identity"]
categories = ["network-programming", "cryptography"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
