[package]
name = "agent-mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types for agent-mesh: identity, messages, ACL, Noise handshake"
keywords = ["agent", "mesh", "encryption", "noise", "identity"]
categories = ["network-programming", "cryptography"]

[features]
default = []
wasm = ["getrandom-02/js", "getrandom-04/wasm_js", "uuid/js"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
snow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dependencies.getrandom-02]
package = "getrandom"
version = "0.2"
optional = true

[dependencies.getrandom-04]
package = "getrandom"
version = "0.4"
optional = true
