[package]
name = "agent-mesh-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent Card registry with capability search for agent-mesh"
keywords = ["agent", "mesh", "registry", "discovery", "capability"]
categories = ["network-programming"]

[[bin]]
name = "agent-mesh-registry"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
