[package]
name = "agent-mesh-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebSocket relay server for agent-mesh"
keywords = ["agent", "mesh", "relay", "websocket", "server"]
categories = ["network-programming"]

[[bin]]
name = "agent-mesh-relay"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
agent-mesh-sdk = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
insta = { version = "1", features = ["json", "redactions"] }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
