[package]
name = "agent-mesh-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "All-in-one agent-mesh server (registry + relay)"
keywords = ["agent", "mesh", "server"]
categories = ["network-programming"]

[[bin]]
name = "agent-mesh-server"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
agent-mesh-registry = { workspace = true }
agent-mesh-relay = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
