[package]
name = "agent-mesh-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM/PWA client for agent-mesh — cross-platform WebSocket connectivity"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-mesh-core = { workspace = true, features = ["wasm"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# WASM-compatible WebSocket (web-sys on wasm32, tokio-tungstenite on native)
tokio-tungstenite-wasm = "0.8"
futures-util = { workspace = true }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
