[package]
name = "agent-meshctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for agent-mesh: keygen, register, discover, request, revoke"
keywords = ["agent", "mesh", "cli", "management", "control"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent-meshctl"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
agent-mesh-sdk = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
axum = { workspace = true }
tempfile = "3"
