[package]
name = "agent-meshctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for agent-mesh: keygen, register, discover, request, revoke"
keywords = ["agent", "mesh", "cli", "management", "control"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent-meshctl"
path = "src/main.rs"

[features]
default = []
mcp-server = ["dep:rmcp", "dep:schemars", "dep:axum", "dep:uuid"]

[dependencies]
agent-mesh-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
toml = { workspace = true }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
tower = { workspace = true }
