[package]
name = "agent-meshd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local daemon for agent-mesh relay connectivity"
keywords = ["agent", "mesh", "daemon", "proxy", "sidecar"]
categories = ["network-programming"]

[[bin]]
name = "agent-meshd"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = "0.4"

[dev-dependencies]
axum = { workspace = true }
