[package]
name = "agent-meshd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local daemon for agent-mesh relay connectivity"
keywords = ["agent", "mesh", "daemon", "proxy", "sidecar"]
categories = ["network-programming"]

[[bin]]
name = "agent-meshd"
path = "src/main.rs"

[dependencies]
agent-mesh-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = "0.4"
axum = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tower = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
